Align brand rail with CDN logo marquee

--- a/index.html
+++ b/index.html
@@ -53,88 +53,111 @@
           </div>
           <p class="hero-trust">Sales and marketing leaders at top B2B companies trust Belkins</p>
           <ul class="sr-only" aria-label="Trusted by leading companies">
-            <li>BOB</li>
-            <li>EBANX</li>
-            <li>BERKELEY</li>
-            <li>ORDWAY</li>
-            <li>CITRUSAD</li>
+            <li>Hello Garage</li>
+            <li>MMS</li>
+            <li>Solar</li>
+            <li>GarageExperts</li>
             <li>GE</li>
-            <li>CITCON</li>
-            <li>CEMTREX</li>
-            <li>BORN &amp; BRED</li>
-            <li>MOLE STREET</li>
-            <li>DIGITAL KNIGHTS</li>
           </ul>
           <div class="hero-marquee" aria-hidden="true">
             <div class="marquee-track">
               <ul class="marquee-group">
                 <li class="brand-logo">
-                  <img src="assets/logos/bob.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991132/Hello_garagre_dw3gu8.png"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/ebanx.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991132/MMS_yl58fv.png"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/berkeley.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991132/solar_ipqibl.png"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/ordway.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759989717/GarageExperts_LogoUpdated_CMYK_green-grey_yfzsv2.webp"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/citrusad.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/ge.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/citcon.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/cemtrex.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/bornbred.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/mole-street.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/digital-knights.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991369/ge.hdpkqi50_1_agpwjx.svg"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                  />
                 </li>
               </ul>
               <ul class="marquee-group" aria-hidden="true">
                 <li class="brand-logo">
-                  <img src="assets/logos/bob.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991132/Hello_garagre_dw3gu8.png"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                    loading="lazy"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/ebanx.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991132/MMS_yl58fv.png"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                    loading="lazy"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/berkeley.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991132/solar_ipqibl.png"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                    loading="lazy"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/ordway.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759989717/GarageExperts_LogoUpdated_CMYK_green-grey_yfzsv2.webp"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                    loading="lazy"
+                  />
                 </li>
                 <li class="brand-logo">
-                  <img src="assets/logos/citrusad.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/ge.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/citcon.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/cemtrex.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/bornbred.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/mole-street.svg" alt="" width="160" height="80" decoding="async" />
-                </li>
-                <li class="brand-logo">
-                  <img src="assets/logos/digital-knights.svg" alt="" width="160" height="80" decoding="async" />
+                  <img
+                    src="https://res.cloudinary.com/diptffkzh/image/upload/v1759991369/ge.hdpkqi50_1_agpwjx.svg"
+                    alt=""
+                    width="220"
+                    height="88"
+                    decoding="async"
+                    loading="lazy"
+                  />
                 </li>
               </ul>
             </div>
