Add client acquisition plan section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,67 @@
         </section>
       </div>
     </header>
+    <main>
+      <section class="client-plan" aria-labelledby="client-plan-heading">
+        <div class="container">
+          <div class="client-plan__intro">
+            <h2 class="client-plan__title" id="client-plan-heading">
+              Client acquisition plan<br />done for you
+            </h2>
+            <p class="client-plan__description">
+              Transcending industry fluctuations, our growth solutions will continuously<br />increase your pipeline up to 45% at just a fourth of the in-house cost.
+            </p>
+          </div>
+          <div class="client-plan__layout">
+            <article class="plan-card">
+              <figure class="plan-card__figure">
+                <img
+                  src="https://res.cloudinary.com/diptffkzh/image/upload/v1759992729/omnichannel-desktop.V37vSY3Y_wju53j.webp"
+                  alt=""
+                  loading="lazy"
+                  decoding="async"
+                />
+              </figure>
+              <div class="plan-card__body">
+                <h3 class="plan-card__title">Omnichannel appointment setting</h3>
+                <ul class="plan-card__list">
+                  <li>Cold email outreach</li>
+                  <li>Cold and intent calling</li>
+                  <li>Voicemails</li>
+                  <li>SMS / WhatsApp</li>
+                  <li>LinkedIn lead generation</li>
+                  <li>Paid advertising</li>
+                </ul>
+              </div>
+              <button
+                type="button"
+                class="plan-card__cta"
+                aria-label="Learn more about omnichannel appointment setting"
+              >
+                <span aria-hidden="true">→</span>
+              </button>
+            </article>
+            <div class="plan-services">
+              <p class="plan-services__intro">
+                Meet our all-inclusive B2B lead generation services performed<br />by world-class sales experts:
+              </p>
+              <ul class="plan-services__list">
+                <li><a href="#">Sales development</a></li>
+                <li><a href="#">Outsourced SDRs</a></li>
+                <li><a href="#">Lead generation</a></li>
+                <li><a href="#">Sales enablement</a></li>
+                <li><a href="#">Lead nurturing</a></li>
+                <li><a href="#">Lead generation training</a></li>
+                <li><a href="#">Demand generation</a></li>
+                <li><a href="#">HubSpot CRM consulting</a></li>
+                <li><a href="#">Deliverability consulting</a></li>
+                <li><a href="#">Account-based marketing</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="scripts.js"></script>
   </body>
 </html>
