--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </div>
         </div>
       </section>
-      <section class="challenges" aria-labelledby="challenges-heading">
+      <section id="challenges" class="challenges" aria-labelledby="challenges-heading">
         <div class="container">
           <div class="challenges__intro">
             <h2 class="challenges__title" id="challenges-heading">
@@ -217,8 +217,9 @@
             <article class="challenge-card">
               <div class="challenge-card__icon" aria-hidden="true">
                 <svg viewBox="0 0 32 32" focusable="false" aria-hidden="true">
-                  <path d="M6 26h20" />
-                  <path d="M8 20l6-6 4 4 6-7" />
+                  <path d="M6 25.5h20" />
+                  <path d="M6.5 18l6-6 4.2 4.2L25 7" />
+                  <path d="M25 7h4v4" />
                 </svg>
               </div>
               <div class="challenge-card__content">
@@ -233,10 +234,12 @@
             <article class="challenge-card">
               <div class="challenge-card__icon" aria-hidden="true">
                 <svg viewBox="0 0 32 32" focusable="false" aria-hidden="true">
-                  <path d="M10 6h12" />
-                  <path d="M10 26h12" />
-                  <path d="M10 6c0 4 6 5 6 10s-6 6-6 10" />
-                  <path d="M22 26c0-4-6-5-6-10s6-6 6-10" />
+                  <path d="M11 6h10" />
+                  <path d="M11 26h10" />
+                  <path d="M11 6c0 3.8 10 5.8 10 10s-10 6.2-10 10" />
+                  <path d="M21 6c0 3.8-10 5.8-10 10s10 6.2 10 10" />
+                  <path d="M13 13h6" />
+                  <path d="M19 19h-6" />
                 </svg>
               </div>
               <div class="challenge-card__content">
@@ -251,9 +254,11 @@
             <article class="challenge-card">
               <div class="challenge-card__icon" aria-hidden="true">
                 <svg viewBox="0 0 32 32" focusable="false" aria-hidden="true">
-                  <path d="M10.5 11l-2.8-2.8a3.5 3.5 0 015-5l2.8 2.8" />
-                  <path d="M21.5 21l2.8 2.8a3.5 3.5 0 01-5 5l-2.8-2.8" />
-                  <path d="M12.5 19.5l6-6" />
+                  <path d="M11 9.5L8.5 7a4 4 0 015.7-5.7L16.7 4" />
+                  <path d="M21 22.5l2.5 2.5a4 4 0 01-5.7 5.7L15.3 28" />
+                  <path d="M13.5 18.5l5-5" />
+                  <path d="M19.5 8.5l2-2" />
+                  <path d="M12.5 23.5l-2 2" />
                 </svg>
               </div>
               <div class="challenge-card__content">
@@ -268,13 +273,13 @@
             <article class="challenge-card">
               <div class="challenge-card__icon" aria-hidden="true">
                 <svg viewBox="0 0 32 32" focusable="false" aria-hidden="true">
-                  <circle cx="16" cy="16" r="5.5" />
-                  <path d="M16 7V5" />
-                  <path d="M16 27v-2" />
-                  <path d="M8.5 9.5L7 8" />
-                  <path d="M24.5 23.5L23 22" />
-                  <path d="M7 24l2-2" />
-                  <path d="M25 8l-2 2" />
+                  <circle cx="16" cy="16" r="4.5" />
+                  <path d="M16 7.5V5" />
+                  <path d="M16 27v-2.5" />
+                  <path d="M8.2 11.5l-1.8-1.8" />
+                  <path d="M25.6 22.9l-1.8-1.8" />
+                  <path d="M7 22.5l2.2-2.2" />
+                  <path d="M25 9.5l-2.2 2.2" />
                 </svg>
               </div>
               <div class="challenge-card__content">
@@ -290,8 +295,8 @@
               <div class="challenge-card__icon" aria-hidden="true">
                 <svg viewBox="0 0 32 32" focusable="false" aria-hidden="true">
                   <path d="M6 8h20" />
-                  <path d="M9 8l4 7v5l6 4v-9l4-7" />
-                  <path d="M13 20h6" />
+                  <path d="M9.5 8l6.5 8v7l4 3v-9l6-9" />
+                  <path d="M13 21h6" />
                 </svg>
               </div>
               <div class="challenge-card__content">
@@ -306,11 +311,12 @@
             <article class="challenge-card">
               <div class="challenge-card__icon" aria-hidden="true">
                 <svg viewBox="0 0 32 32" focusable="false" aria-hidden="true">
-                  <path d="M8 14l5.5 5.5a2 2 0 002.8 0L22 14" />
-                  <path d="M10 10l-2.5-2.5" />
-                  <path d="M22 10l2.5-2.5" />
-                  <path d="M13 22l-3 3" />
-                  <path d="M19 22l3 3" />
+                  <path d="M8 14l5.2 5.2a2.5 2.5 0 003.6 0L22 14" />
+                  <path d="M10 10l-2.6-2.6" />
+                  <path d="M22 10l2.6-2.6" />
+                  <path d="M14.5 16.5l3-3" />
+                  <path d="M13.2 22.8l-2.7 2.7" />
+                  <path d="M18.8 22.8l2.7 2.7" />
                 </svg>
               </div>
               <div class="challenge-card__content">
