Add results banner section to homepage

--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
       </div>
     </header>
     <main>
+      <section class="results-banner" aria-labelledby="results-banner-title">
+        <div class="container">
+          <div class="results-banner__content">
+            <h2 class="results-banner__headline" id="results-banner-title">
+              Our clients close <span>25%</span> more<br />
+              deals with their dream<br />
+              accounts
+            </h2>
+            <a class="btn btn-primary" href="#">Book a call</a>
+          </div>
+        </div>
+      </section>
       <section class="client-plan" aria-labelledby="client-plan-heading">
         <div class="container">
           <div class="client-plan__intro">
